# rust_connectivity

./: .dockerignore  .dockerignore.save  .gitignore  Cargo.toml  Dockerfile  README.md  call_api_each_year.sh  download_input.sh  download_input_mac.sh  example_payload.json  example_payload_1000_start_nodes.json  example_payload_1000_start_nodes_2019.json  example_payload_2022_new_route_and_build.json  index.html  index.html.1  wget-log  wget-log.1
.ipynb_checkpoints/: Cargo-checkpoint.toml  README-checkpoint.md  download_input-checkpoint.sh  download_input_mac-checkpoint.sh
py_processing/: download_from_gcs.py
src/: add_edges_and_values.rs  floodfill.rs  get_time_of_day_index.rs  main.rs  priority_queue.rs  read_files.rs  serialise_files.rs  shared.rs
src/.ipynb_checkpoints/: floodfill-checkpoint.rs  main-checkpoint.rs  priority_queue-checkpoint.rs  read_files-checkpoint.rs  serialise_files-checkpoint.rs  shared-checkpoint.rs
