[package]
name = "connectivity_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
bincode = "1.3.3"
serde = { version = "1.0.152", features=["derive"] }
smallvec = { version = "1.10.0", features=["serde"] }
nanorand = "0.7.0"
serde_json = "1.0.91"
google-cloud-storage = "0.8.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
arrayvec = "0.7.2"
tikv-jemallocator = "0.4.0"
rayon = "1.6.1"
fs-err = "2.9.0"

[profile.release]
lto = true
codegen-units = 1

