[package]
name = "rust_connectivity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.152", features=["derive"] }
smallvec = { version = "1.10.0", features=["serde"] }
serde_json = "1.0.91"
rayon = "1.6.1"
fs-err = "2.9.0"
actix-web = "4.3.0"

[profile.release]
lto = true
codegen-units = 1

